# real-time-rag

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: README.md
.claude/agents/: coder.md  test-runner.md  test-writer.md
.claude/scripts/: block-test-edits.sh
.claude/specs/: .gitkeep  11b-mcp-query-stats.spec.md  12-mcp-semantic-search.spec.md  13a-mcp-get-transactions.spec.md  13b-mcp-system-freshness.spec.md  14-mcp-input-validation.spec.md  15-agent-tool-use-loop.spec.md  16-system-prompt.spec.md  17-chat-repl.spec.md  18a-demo-orchestrator.spec.md  18b-golden-questions.spec.md  19a-eval-runner.spec.md  (+3 more)
agent/: __init__.py  ask.py  chat.py  loop.py  mcp_bridge.py  system_prompt.md
consumer/: config.py  db.py  embed_demo.py  embedder.py  freshness.py  main.py  search.py
demo/: __init__.py  golden_questions.json  incident_control.py  run_demo.py
eval/: RECALL.md  REPORT.md  __init__.py  grade.py  ground_truth_queries.py  isolation_experiment.py  llm_judge.py  mechanical_checks.py  recall.py  report.py  run_eval.py
graphify-out/: .graphify_detect.json  .graphify_python
infra/: docker-compose.yml  init.sql  smoke_test.py  smoke_test_postgres.py
mcp_server/: __init__.py  freshness.py  semantic.py  server.py  stats.py  transactions.py  validation.py
producer/: config.py  errors.py  event.py  inject.py  main.py  scenarios.py  watch.py
tests/: conftest.py  test_eval_report.py  test_golden_questions.py  test_mcp_get_transactions.py  test_mcp_query_stats.py  test_mcp_semantic_search.py  test_mcp_system_freshness.py
(+15 files in other folders)
