[project]
name = "streaming-rag"
version = "0.1.0"
description = "Real-time streaming RAG: operational intelligence over a live event stream"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.6",
]

[dependency-groups]
dev = [
    "ruff>=0.11",
    "pytest>=8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
