[project]
name = "streaming-rag"
version = "0.1.0"
description = "Real-time streaming RAG: operational intelligence over a live event stream"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.6",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "python-dotenv>=1.0",
    "sentence-transformers>=2.2",
    "fastmcp>=2",
    "anthropic>=0.40",
    "rich>=13",
]

[dependency-groups]
dev = [
    "ruff>=0.11",
    "pytest>=8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
